fixed canvas resizing issue on mobile hopefully

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,15 @@
-body {
+html, body {
     font-family: 'Josefin Sans';
     font-weight: lighter;
+    margin: 0;
+    overflow: hidden;
+    height: 100%;
+}
+
+/* Scale canvas with resize attribute to full size */
+canvas[resize] {
+    width: 100%;
+    height: 100%;
 }
 
 .info-section, .work-section, .contact-section {
